# 2025-p1-Abhinavmohindersingh

./: README.md  endpoints.http  pyproject.toml
code/: endpoints.http  pyproject.toml
code/todo/: __init__.py  pyproject.toml
code/todo/views/: routes.py
todo/: __init__.py
todo/views/: routes.py
