[project]
name = "todo"
version = "0.1.0"
description = ""
authors = [
    {name = "Abhinav Student",email = "s4824417@student.uq.edu.au"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
